Fix typo in p4d dockerfile

--- a/helix-p4d/Dockerfile
+++ b/helix-p4d/Dockerfile
@@ -25,7 +25,7 @@ ARG P4TCP=1666
 ARG P4USER=super
 ARG P4PASSWD=Passw0rd
 ARG P4CASE=-C0
-ARG P4CHARSET=utf8x
+ARG P4CHARSET=utf8
 
 # Dynamic Environment
 ENV P4NAME=$P4NAME \
